graph: fix important bug that on firefox iframes were not responding to input

--- a/moonspeak/graph/frontend/styles/moonspeak.css
+++ b/moonspeak/graph/frontend/styles/moonspeak.css
@@ -1,3 +1,11 @@
-/* iframe {
+iframe {
     pointer-events: all !important;
-}*/
+}
+
+path {
+    pointer-events: none !important;
+}
+
+rect {
+    pointer-events: none !important;
+}
